folder sturcure changed / basic index html added

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+html,body, #root {
+	width: 100%;
+	height:100%;
+}
 .App {
+
+	width: 100%;
+	height:100%;
+
 	text-align: center;
+
+	/* flex */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
 }
 
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
+.App-main {
+	flex-grow: 1;
+	width: 100%;
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+	/* flex */
+	display: flex;
 }
 
 .App-header {
+	background-color: #161a22;
+	width: 200px;
+	
+}
+
+.App-footer {
 	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
+	width: 100%;
+	height: 100px;
 
-.App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
 }
