--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ html,body, #root {
 	height:100%;
 }
 .App {
-
 	width: 100%;
 	height:100%;
 
@@ -18,22 +17,34 @@ html,body, #root {
 }
 
 .App-main {
-	flex-grow: 1;
 	width: 100%;
+
+	flex-grow: 1;
 
 	/* flex */
 	display: flex;
 }
 
 .App-header {
-	background-color: #161a22;
 	width: 200px;
-	
+
+	background-color: #161a22;
+	color: white;
+}
+
+.App-header h1 {
+	font-size: 3.0rem;
+	margin-bottom: 0;
+}
+.App-header h3 {
+	margin-top: 0;
+	font-size: 1.2rem;
 }
 
 .App-footer {
-	background-color: #282c34;
 	width: 100%;
 	height: 100px;
+
+	background-color: #282c34;
 
 }
