--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -11,3 +11,22 @@
 .Main-page .champions img {
     width: 5%;
 }
+
+.championSelect .championSelect-red {
+    width: 40%;
+    height: 100%;
+    border: 1px solid white;
+    display: inline-block;
+}
+
+.championSelect .championSelect-blue {
+    width: 40%;
+    height: 100%;
+    border: 1px solid white;
+    display: inline-block;
+}
+
+.championSelect {
+    width: 100%;
+    height: 50px;
+}
